--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -5,6 +5,8 @@
 $main_color: #e36b00;
 $basic_text: #ffffff;
 $basic_text_dark: #b95903;
+$background_dark: hsl(30, 30, 25);
+$color_b: hsl(30, 30, 30);
 $wrap: 740px;
 
 html{
@@ -15,96 +17,19 @@ html{
     }
   }
 }
-.is-fullhd-only {
-  width: 740px;
-}
-
-// .nav {
-//     height: 96px;
-//     text-align: center;
-// }
-
-.navigator {
-    width: 100%;
-    background-color: $main_color;
-    
-    padding: 48px 8px 12px 8px;
-
-
-    .navigator-wrap {
-      display: flex;
-      flex-direction: row;
-      justify-content: space-between;
-      // set width
-      width: $wrap;
-      // center 
-      margin: 0 auto;
-
-      .navigator-wrap-right {
-        display: flex;
-        flex-direction: row;
-        li {
-
-          a {
-            padding: 8px 12px;
-            background-color: red;
-          }
-        }
-      }
-
-      // a {
-      //   background-color: $basic_text_dark;
-      //   padding: 12px 24px;
-      // }
-    }
-    // justify-content: center;
-    // background-color: $main_color
-  
-    // border-bottom: 2px solid $primary;
-    // font-size: 1.5em;
-    // a {
-    //     padding: 8px 12px;
-    //     color: $basic_text;
-    //     font-weight: bold;
-    //     &:first-child {
-    //     }
-    //     &:hover {
-    //         // outline-offset: -3px;
-    //         // border-bottom: 2px solid $primary;
-    //         color: $basic_text;
-    //         box-sizing: border-box;
-    //         box-shadow: inset 0px -3px 0px 0px $basic_text_dark;
-
-    //         // background-color: rgba($color: #ee5135, $alpha: 1)
-    //         // background-color: $light;
-
-    //     }
-    // }
-}
-
-#left {
-    .search {
-        border-radius: 24px;
-    }
-}
-.table {
-  thead {
-    color: #ffffff;
-    background-color: $primary;
-    border-radius: 8px;
-
-    tr {
-      td {
-        color: #ffffff;
-      }
-    }
+aside {
+  color: white;
+  background-color: $color_b;
+  .menu-label {
+    color: hsl(0, 3, 80)
   }
-
-  tbody {
-    tr {
+  .menu-list {
+      li > a {
+      color: $basic_text;
       &:hover {
-        box-sizing: border-box;
-        box-shadow: inset 0px -1px 0px 0px $primary;
+        background-color: $background_dark;
+        color: white;
+        text-shadow: hsl(30, 30, 10);
       }
     }
   }
