--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -9,6 +9,11 @@ html * {
     padding: 6px 12px;
 }
 
+#Month {
+    font-size: 12em;
+    line-height: 120px;
+}
+
 #card-item {
     margin: 3px 0;
     padding: 0 0;
