--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -14,6 +14,10 @@ html * {
     line-height: 120px;
 }
 
+#apps {
+    margin: 48px 0 2px 0;
+}
+
 #card-item {
     margin: 3px 0;
     padding: 0 0;
